--- a/Deployment/service.yaml
+++ b/Deployment/service.yaml
@@ -3,17 +3,17 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: myservice
-  name: myservice
+    app: my-dashboard-service
+  name: my-dashboard-service
 spec:
   ports:
-  - name: bakehouseport
+  - name: dashboardport
     port: 80
     protocol: TCP
     targetPort: 80
     nodePort: 30010
   selector:
-    app: bakehouse
-  type: NodePort
+    app: dashboard
+  type: LoadBalancer
 status:
   loadBalancer: {}
